<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CourseworkTracker</string>
    <string name="add_term">Add a Term</string>
    <string name="add_term_msg">Please enter a name for the term:</string>
    <string name="add_term_err_exist">Term with the same name already exists!</string>
    <string name="add_term_err_invalid">Invalid Term Name</string>
    <string name="delete_term">Delete a Term</string>
    <string name="delete_term_msg">Are you sure you want to delete this term?</string>
    <string name="add_course">Add a Course</string>
    <string name="title_overview">Overview</string>
    <string name="overview_error_add_course">Cannot add a course in overview, please select a term.</string>
    <string name="add_course_err_exist">Course with the same name already exists!</string>
    <string name="add_course_err_incomplete">Please complete all the fields.</string>
    <string name="add_course_name">Course Name</string>
    <string name="add_course_breadth">Breadth:</string>
    <string name="add_course_gen_ed">Gen-Ed:</string>
    <string name="add_course_credit">Credits:</string>
    <string name="add_course_grade">Grade:</string>
    <string name="add_course_section">Sections:</string>
    <string name="add_course_add_section">Add..</string>
    <string name="add_section">Add a Section</string>
    <string name="add_section_msg">Enter section name and schedule:</string>
    <string name="course_detail_edit">Edit course</string>
    <string name="course_detail_add_todo">Add an event</string>
    <string name="course_detail_todoList">TODO List</string>
    <string name="course_detail_container_empty">Null</string>
    <string name="add_assignment_format">Please follow the date format</string>
    <string name="delete_assignment">Delete an Event</string>
    <string name="delete_assignment_msg">Are you sure you want to delete this event?</string>
    <string name="text_choose">Choose..</string>
    <string name="delete_course">Delete a Course</string>
    <string name="delete_course_msg">Are you sure you want to delete this course?</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="button_prev">Prev</string>
    <string name="button_done">Done</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_course">AddCourse</string>
    <string name="hello_world">Hello world!</string>
    <string name="Notification">Notification</string>

    <string-array name="credits">
        <item>Select..</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="grade">
        <item>Select..</item>
        <item>Not Graded</item>
        <item>In Progress</item>
        <item>A</item>
        <item>AB</item>
        <item>B</item>
        <item>BC</item>
        <item>C</item>
        <item>D</item>
        <item>F</item>
    </string-array>
    <string-array name="breadth">
        <item>Select..</item>
        <item>Biological Science</item>
        <item>Humanities</item>
        <item>Interdivisional</item>
        <item>Literature</item>
        <item>Natural Science</item>
        <item>Physical Science</item>
        <item>Social Science</item>
    </string-array>
    <string-array name="gen_ed">
        <item>Select..</item>
        <item>None</item>
        <item>Comm-A</item>
        <item>Comm-B</item>
        <item>Quan-A</item>
        <item>Quan-B</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="upcoming">Upcoming Assignment</string>
    <string name="overall_gpa">Overall GPA</string>
    <string name="general">General Education</string>
    <string name="breadth">Breadth Requirements</string>
    <string name="title_activity_settings">Settings</string>
    <string name="overall_credits">Credits</string>
    <string name="reminder">Reminder</string>
    <string name="time">Reminder Time</string>
    <string name="button_Done">Done</string>
    <string name="reminder_day">Days before due:</string>

</resources>
