<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.courseworktracker.CourseDetailFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course_credit"
        android:id="@+id/textview_course_detail_credit"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course_grade"
        android:id="@+id/textview_course_detail_grade"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        android:layout_below="@+id/textview_course_detail_credit"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course_breadth"
        android:id="@+id/textview_course_detail_breadth"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        android:layout_below="@+id/textview_course_detail_grade"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course_gen_ed"
        android:id="@+id/textview_gen_ed"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        android:layout_below="@+id/textview_course_detail_breadth"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_detail_container_empty"
        android:id="@+id/textview_course_detail_credit_container"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_detail_container_empty"
        android:id="@+id/textview_course_detail_grade_container"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        android:layout_below="@+id/textview_course_detail_credit_container"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_detail_container_empty"
        android:id="@+id/textview_course_detail_breadth_container"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        android:layout_below="@+id/textview_course_detail_grade_container"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_detail_container_empty"
        android:id="@+id/textview_course_detail_gen_ed_container"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        android:layout_below="@+id/textview_course_detail_breadth_container"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_detail_todoList"
        android:id="@+id/textview_course_detail_todoList"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        android:layout_below="@+id/textview_course_detail_gen_ed_container"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView_todoList"
        android:layout_below="@+id/textview_course_detail_todoList"
        android:layout_above="@+id/button_course_detail_add_todo"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_detail_add_todo"
        android:textSize="@dimen/text_size_content"
        android:id="@+id/button_course_detail_add_todo"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_detail_edit"
        android:textSize="@dimen/text_size_content"
        android:id="@+id/button_course_detail_edit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
