<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.courseworktracker.AddCourse">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course_name"
        android:id="@+id/textview_course_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_course_name"
        android:layout_below="@+id/textview_course_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course_credit"
        android:id="@+id/textview_credit"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/edittext_course_name"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course_grade"
        android:id="@+id/textview_grade"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        android:layout_below="@+id/spinner_credit"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course_breadth"
        android:id="@+id/textview_breadth"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        android:layout_below="@+id/spinner_grade"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course_gen_ed"
        android:id="@+id/textview_gen_ed"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        android:layout_below="@+id/spinner_breadth"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        android:id="@+id/button_cancel_add_course_1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:id="@+id/button_next_add_course_1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="@dimen/spinner_size"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_credit"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textview_credit"/>

    <Spinner
        android:layout_width="@dimen/spinner_size"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_grade"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textview_grade"/>

    <Spinner
        android:layout_width="@dimen/spinner_size"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_breadth"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textview_breadth" />

    <Spinner
        android:layout_width="@dimen/spinner_size"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_gen_ed"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textview_gen_ed" />

</RelativeLayout>
