<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.courseworktracker.OverviewFragment"
    android:padding = "16dp"
    android:background="@drawable/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming"
        android:id="@+id/textview_overview_upcoming"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/listView_upcoming"
        android:layout_below="@+id/textview_overview_upcoming"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overall_gpa"
        android:id="@+id/textview_overview_gpa"
        android:layout_below="@+id/listView_upcoming"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
     />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_overview_gpa_disp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textview_overview_gpa"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:id="@+id/textview_overview_general"
        android:layout_below="@+id/textview_overview_gpa"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView_general"
        android:layout_below="@+id/textview_overview_general"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breadth"
        android:id="@+id/textview_overview_breadth"
        android:layout_below="@+id/listView_general"
        android:textSize="@dimen/text_size_field_title"
        android:textColor="@android:color/black"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView_breadth"
        android:layout_below="@+id/textview_overview_breadth"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true"/>



</RelativeLayout>